# esp-rs-lab

./: Cargo.toml  README.md  SETUP_S3_GUIDE.md  TROUBLESHOOTING.md
.cargo/: config.toml
.github/workflows/: rust.yml
apps/aht20-bmp280/: Cargo.toml  README.md
apps/aht20-bmp280/src/: aht20.rs  bmp280.rs  main.rs
apps/hello-world/: Cargo.toml
apps/hello-world/src/: main.rs
apps/led-chaser/: Cargo.toml  build.rs
apps/led-chaser/src/: main.rs
apps/soil-sensor/: Cargo.toml  README.md
apps/soil-sensor/src/: main.rs
apps/veml6040/: Cargo.toml  README.md
apps/veml6040/src/: main.rs
apps/veml7700/: Cargo.toml  README.md  veml7700.rar
apps/veml7700/src/: main.rs
apps/wifi/: Cargo.toml  build.rs
apps/wifi/src/: main.rs
user/: ATH20.c  ATH20.h  BMP280.c  BMP280.h  bsp_i2c.c  bsp_i2c.h  delay.c  delay.h  main.c  stm32f10x_it.c
