[workspace]
members = [
    "apps/led-chaser",
    "apps/hello-world",
    "apps/veml7700",
    "apps/veml6040",
    "apps/aht20-bmp280", "apps/soil-sensor",
]
resolver = "2"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
