[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
log = "0.4.22"
critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["log-04", "esp32s3", "auto"] }
