[package]
name = "wifi"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "embassy", "log-04"] }
esp-radio = { version = "0.17.0", features = ["esp32s3", "log-04", "wifi"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
log = "0.4.22"
critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["log-04", "esp32s3", "auto"] }
esp-alloc = "0.9.0"

embassy-executor = { version = "0.9.0" }
embassy-net = { version = "0.8.0", features = ["dhcpv4", "medium-ethernet", "tcp", "dns"] }
embassy-time = { version = "0.5.0", default-features = false, features = ["generic-queue-8"] }
static_cell = "2.1.0"
